--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
 .App {
   min-height: 100vh;
+  background-color: grey;
 } 
+
+h1, h4 {
+  color: bisque;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+h3, ul, #identity, p{
+  color:white;
+}
+h2 {
+  color: aliceblue;
+}
+
+hr {
+  background: bisque;
+  height: 0.2rem;
+}
+
+.stackSkills img:hover, .contactMe img:hover {
+  background: rgb(230, 249, 250);
+}
